manifests/starlog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starlog
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: starlog
  template:
    metadata:
      labels:
        app: starlog
    spec:
      containers:
        - name: starlog
          imagePullPolicy: Always
          image: cristianaldea/starlog:latest
          ports:
            - name: main
              containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: starlog
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: frontend
  selector:
    app: starlog
